--- a/main.html
+++ b/main.html
@@ -8,6 +8,33 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action = "" method = "post">
+		<label for = "name">Name</label>
+		<input id = "name" type = "text" required>
+		<label for = "email">Email</label>
+		<input id = "email" type = "email" required>
+		<br>
+		<label>Gender</label>
+		<br>
+		<input type = "radio" value = "Male" name = "gender" required>Male
+		<br>
+		<input type = "radio" value = "Female" name = "gender" required>Female
+		<br>
+		<label for = "cars">Car Brands</label>
+		<select>
+			<option>BMW</option>
+			<option>Audi</option>
+			<option>Mercedez</option>
+		</select>
+
+		<label for = "carage">Car Age</label>
+		<input id = "carage" type = "number" required>
+		<label for = "dop">Date of Purchase</label>
+		<input id = "dop" type = "date" required>
+		<label for = "password">Password</label>
+		<input id = "password" type = "password" required>
+		<button type = "submit">Submit</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
