--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 		<input type = "radio" value = "Female" name = "gender" required>Female
 		<br>
 		<label for = "cars">Car Brands</label>
-		<select>
+		<select id = "cars">
 			<option>BMW</option>
 			<option>Audi</option>
 			<option>Mercedez</option>
